<resources>
    <string name="app_name">Rep Tracker</string>
    <string name="home">Home</string>
    <string name="history">History</string>
    <string name="chart">Chart</string>
    <string name="saved">Home</string>
    <string name="training_day">Training Day*</string>
    <string name="bench_press">Bench Press (kg)</string>
    <string name="deadlift">Deadlift (kg)</string>
    <string name="OHP">Overhead Press (kg)</string>
    <string name="squat">Squat (kg)</string>
    <string name="row">Row (kg)</string>
    <string name="curl">Curl (kg)</string>
    <string name="ext">Extension (kg)</string>
    <string name="rep">Rep</string>
    <string name="set">Set</string>
    <string name="pullrep">Pull up Rep</string>
    <string name="pushrep">Push up Rep</string>
    <string name="pull">Pull up</string>
    <string name="push">Push up</string>
    <string name="compound">Compounds</string>
    <string name="bodyweight">Bodyweights</string>
    <string name="isolations">Isolations</string>
    <string name="new_data">Today\'s Workout</string>
    <string name="go_back">Back</string>
    <string name="next">Next</string>
    <string name="save">Save</string>
    <string name="bw">Body Weight (kg)</string>
    <string name="body">Body Weight</string>
    <string name="weight">Weight (kg)</string>
    <string name="bp">Bench Press</string>
    <string name="dl">Deadlift</string>
    <string name="op">Overhead Press</string>
    <string name="sq">Squat</string>
    <string name="r">Row</string>
    <string name="c">Curl</string>
    <string name="e">Extension</string>
    <string name="progress">Compound Progress</string>
    <string name="no_data">Add your workout by clicking on the button</string>
    <string name="no_data_chart">Chart data unavailable. Please add at least 3 workout.</string>
    <string name="last_5">Last 5 Workouts</string>

    <!--For Content Description-->
    <string name="label_recyclerview">List of workouts</string>
    <string name="label_fab">Button for adding workouts</string>
</resources>
